--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     build: 
       context: ./client
       args: 
-        VITE_API_URL: http://16.171.36.230:4500/api
+        VITE_API_URL: http://16.171.36.230:4500
     container_name: frontend 
     restart: always
     env_file:
